:bug: debug(review): do automatic line breaks in the review detail view

--- a/src/views/product_detail/review.css
+++ b/src/views/product_detail/review.css
@@ -79,7 +79,6 @@
 
 .single-review-detail-container .review-content-detail {
   margin: 10px;
-  white-space: pre;
   cursor: pointer;
 }
 
